[package]
name = "zed_kotlin"
version = "0.1.4"
edition = "2021"
publish = false
license = "MIT"

[lib]
path = "src/kotlin.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.5.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

